--- a/content/blog/2021-02-05-blog-3-test.md
+++ b/content/blog/2021-02-05-blog-3-test.md
@@ -4,4 +4,45 @@ date: 2021-02-05T08:12:13.527Z
 description: blog 3 test
 thumbnail: https://images.pexels.com/photos/3990562/pexels-photo-3990562.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
 ---
-blog 3 test
+1. blog 3 test
+
+   ```
+
+   <table>
+     <tr>
+       <th>Company</th>
+       <th>Contact</th>
+       <th>Country</th>
+     </tr>
+     <tr>
+       <td>Alfreds Futterkiste</td>
+       <td>Maria Anders</td>
+       <td>Germany</td>
+     </tr>
+     <tr>
+       <td>Centro comercial Moctezuma</td>
+       <td>Francisco Chang</td>
+       <td>Mexico</td>
+     </tr>
+     <tr>
+       <td>Ernst Handel</td>
+       <td>Roland Mendel</td>
+       <td>Austria</td>
+     </tr>
+     <tr>
+       <td>Island Trading</td>
+       <td>Helen Bennett</td>
+       <td>UK</td>
+     </tr>
+     <tr>
+       <td>Laughing Bacchus Winecellars</td>
+       <td>Yoshi Tannamuri</td>
+       <td>Canada</td>
+     </tr>
+     <tr>
+       <td>Magazzini Alimentari Riuniti</td>
+       <td>Giovanni Rovelli</td>
+       <td>Italy</td>
+     </tr>
+   </table>
+   ```
