Update Blog “2021-02-05-blog-3-test”

--- a/content/blog/2021-02-05-blog-3-test.md
+++ b/content/blog/2021-02-05-blog-3-test.md
@@ -6,7 +6,7 @@ thumbnail: https://images.pexels.com/photos/3990562/pexels-photo-3990562.jpeg?au
 ---
 1. blog 3 test
 
-<table>
+`<table>
   <tr>
     <th>Company</th>
     <th>Contact</th>
@@ -42,4 +42,4 @@ thumbnail: https://images.pexels.com/photos/3990562/pexels-photo-3990562.jpeg?au
     <td>Giovanni Rovelli</td>
     <td>Italy</td>
   </tr>
-</table>
+</table>`
